# real-time-fraud-monitoring

./: .env.example  README.md  ci-cd.yml  docker-compose.yml  pyproject.toml  requirements.txt
config/: manifest.json
configs/: project.json
data/: README.md
demo/: index.html  styles.css
docs/: architecture.md  deployment.md  evaluation_plan.md  index.html  runbook.md
infra/: Dockerfile  docker-compose.yml
src/: __init__.py
src/app/web/: index.html
src/monitoring/: drift.py  latency.py
src/pipeline/: clean.py  ingest.py  validate.py
src/serving/: api.py
src/training/: evaluate.py  train.py
tests/: test_api.py  test_pipeline.py  test_smoke.py
